{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 240,
  "lineage": "adcf7b4b-55a3-d052-7fab-4dc3d1191f4f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:135159751293:loadbalancer/app/myapp-load-balancer/eb96816ff3bd104d",
            "arn_suffix": "app/myapp-load-balancer/eb96816ff3bd104d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-load-balancer-845553890.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:135159751293:loadbalancer/app/myapp-load-balancer/eb96816ff3bd104d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b1e4fecf58a0a9cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046bd2351a501e565"
              },
              {
                "subnet_id": "subnet-073d19ae3ed280156"
              }
            ],
            "subnets": [
              "subnet-046bd2351a501e565",
              "subnet-073d19ae3ed280156"
            ],
            "vpc_id": "vpc-05e0a6cd1ce893373",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:135159751293:listener/app/myapp-load-balancer/eb96816ff3bd104d/dca991453d98f60a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:135159751293:targetgroup/myapp-target-group/2ef937ea8f067536",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:135159751293:listener/app/myapp-load-balancer/eb96816ff3bd104d/dca991453d98f60a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:135159751293:loadbalancer/app/myapp-load-balancer/eb96816ff3bd104d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.main",
            "module.ecs.aws_alb_target_group.app",
            "module.ecs.aws_security_group.lb",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:135159751293:targetgroup/myapp-target-group/2ef937ea8f067536",
            "arn_suffix": "targetgroup/myapp-target-group/2ef937ea8f067536",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:135159751293:targetgroup/myapp-target-group/2ef937ea8f067536",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee047d8b5355f375",
            "domain": "vpc",
            "id": "eipalloc-0ee047d8b5355f375",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-190-9-12.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.9.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9c5cbbac8584683",
            "domain": "vpc",
            "id": "eipalloc-0b9c5cbbac8584683",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-28-9.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.28.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:internet-gateway/igw-0cf7643be983412cf",
            "id": "igw-0cf7643be983412cf",
            "owner_id": "135159751293",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee047d8b5355f375",
            "connectivity_type": "public",
            "id": "nat-0e88be51cdfa23e5c",
            "network_interface_id": "eni-07c3ecab9590a9ffd",
            "private_ip": "172.17.2.54",
            "public_ip": "18.190.9.12",
            "subnet_id": "subnet-073d19ae3ed280156"
          },
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9c5cbbac8584683",
            "connectivity_type": "public",
            "id": "nat-095e98644ccc0f7de",
            "network_interface_id": "eni-0a15bbaa38fde0955",
            "private_ip": "172.17.3.71",
            "public_ip": "3.22.28.9",
            "subnet_id": "subnet-046bd2351a501e565"
          },
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf7643be983412cf",
            "id": "r-rtb-0553606c79b036cbb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0553606c79b036cbb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:route-table/rtb-0cc9c64321e4e59b8",
            "id": "rtb-0cc9c64321e4e59b8",
            "owner_id": "135159751293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e88be51cdfa23e5c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_nat_gateway.gw",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:route-table/rtb-019e846d6c83ac122",
            "id": "rtb-019e846d6c83ac122",
            "owner_id": "135159751293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095e98644ccc0f7de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_nat_gateway.gw",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06393a61dc6fe7900",
            "route_table_id": "rtb-0cc9c64321e4e59b8",
            "subnet_id": "subnet-098138d41b7b1e816"
          },
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_nat_gateway.gw",
            "module.ecs.aws_route_table.private",
            "module.ecs.aws_subnet.private",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00757d4230544599e",
            "route_table_id": "rtb-019e846d6c83ac122",
            "subnet_id": "subnet-059acdd20a9ae2607"
          },
          "dependencies": [
            "module.ecs.aws_eip.gw",
            "module.ecs.aws_internet_gateway.gw",
            "module.ecs.aws_nat_gateway.gw",
            "module.ecs.aws_route_table.private",
            "module.ecs.aws_subnet.private",
            "module.ecs.aws_subnet.public",
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:security-group/sg-029818ada99d98e1b",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029818ada99d98e1b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1e4fecf58a0a9cf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "135159751293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.lb",
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:security-group/sg-0b1e4fecf58a0a9cf",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1e4fecf58a0a9cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "135159751293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:subnet/subnet-098138d41b7b1e816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098138d41b7b1e816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135159751293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:subnet/subnet-059acdd20a9ae2607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059acdd20a9ae2607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135159751293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:subnet/subnet-073d19ae3ed280156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073d19ae3ed280156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135159751293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:subnet/subnet-046bd2351a501e565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046bd2351a501e565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135159751293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05e0a6cd1ce893373"
          },
          "dependencies": [
            "module.ecs.aws_vpc.main",
            "module.ecs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:135159751293:vpc/vpc-05e0a6cd1ce893373",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-004814503cf0d0451",
            "default_route_table_id": "rtb-0553606c79b036cbb",
            "default_security_group_id": "sg-049ce0e83fa71e024",
            "dhcp_options_id": "dopt-088d449dd3af3eada",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05e0a6cd1ce893373",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0553606c79b036cbb",
            "owner_id": "135159751293"
          }
        }
      ]
    }
  ]
}